Fix incorrect spacing
Extra '5' was added

--- a/src/styles/_spacings.scss
+++ b/src/styles/_spacings.scss
@@ -3,7 +3,7 @@
     --standard-vertical-padding: 8px;
     --standard-horizontal-padding: 12px;
     --standard-border-radius: 8px;
-    --standard-control-line-height: 1.55;
+    --standard-control-line-height: 1.5;
 
     @media (max-width: $compactBreakpoint) {
         --standard-margin: 12px;
